--- a/src/style.css
+++ b/src/style.css
@@ -13,13 +13,12 @@ body {
 }
 
 /* Header */
-header {
+h1 {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     color: white;
     padding: 20px;
     margin-bottom: 20px;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -32,12 +31,6 @@ header {
     font-size: 0.4em;
     font-weight: 500;
     vertical-align: middle;
-}
-
-#user-section {
-    margin-right: 8px;
-    align-items: center;
-    
 }
 
 #current-user {
